# common-rust

./: .gitignore  Cargo.toml  LICENSE  rustfmt.toml
src/api-helpers/: Cargo.toml
src/api-helpers/src/: lib.rs
src/api-helpers/src/auth/: firebase_auth.rs
src/api-helpers/src/middleware/: auth.rs  canva.rs  ec_auth.rs  hmac_auth.rs  mod.rs
src/api-helpers/src/services/: data.rs  http.rs  mod.rs
src/api-helpers/src/utils/: store.rs
src/common-data/: Cargo.toml
src/common-data/src/: helpers.rs
src/common-data/src/models/: account.rs  api_client.rs  bool.rs  canva_account.rs  event.rs  listing.rs  metadata.rs  mod.rs  sale.rs  stripe_account.rs  ticket.rs  ticket_design.rs
src/common-data/src/repositories/: account.rs  api_client.rs  design.rs  event.rs  listing.rs  mod.rs  sale.rs  stripe.rs  ticket.rs
src/common-data/src/serialization/: neo4j_record.rs
src/crypto/: Cargo.toml
src/crypto/src/ec/: ed25519.rs
src/data/: Cargo.toml
src/fiat-payment/: Cargo.toml
src/fiat-payment/src/: price_feed.rs  stripe.rs
src/ticket-verification/: Cargo.toml
src/ticket-verification/src/: error.rs  lib.rs  verifier.rs
src/ticketland-core/: Cargo.toml
src/ticketland-core/src/: async_helpers.rs  error.rs  lib.rs
src/ticketland-core/src/services/: arweave.rs  async_utils.rs  ipfs.rs  minio.rs  mod.rs  pinata.rs  redis.rs  redlock.rs
src/ticketland-core/src/streams/: ipfs_read_stream.rs  mod.rs  s3_async_read.rs  s3_read_stream.rs  s3_stream.rs
src/ticketland-crypto/: Cargo.toml
src/ticketland-crypto/src/: lib.rs
src/ticketland-crypto/src/asymetric/: ed25519.rs
src/ticketland-crypto/src/ec/: ed25519.rs
src/ticketland-crypto/src/encoding/: base58.rs  base64.rs  hex.rs  mod.rs
src/ticketland-crypto/src/hash/: keccak256.rs  mod.rs  sha3_256.rs
src/ticketland-crypto/src/symetric/: aes.rs  hmac.rs  mod.rs
src/ticketland-crypto/src/utils/: id.rs
src/ticketland-data/: Cargo.toml  README.md
src/ticketland-data/migrations/2022-11-09-124648_create_account/: up.sql
src/ticketland-data/migrations/2022-11-10-090019_create_account/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-10-090759_create_events/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-17-034159_ticket_draft/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-17-050017_stripe_customer/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-18-084740_buy_listing_n_listing/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-24-003131_event_location/: down.sql  up.sql
src/ticketland-data/migrations/2022-11-24-014613_event_webbundle_arweave_tx_id/: down.sql  up.sql
src/ticketland-data/migrations/2023-04-26-120334_events_resale/: down.sql  up.sql
src/ticketland-data/migrations/2023-05-04-184547_account_delete_request/: down.sql  up.sql
src/ticketland-data/migrations/2023-06-16-004815_sui_migration/: down.sql  up.sql
src/ticketland-data/src/: connection.rs  connection_pool.rs  lib.rs  schema.rs
src/ticketland-data/src/models/: account.rs  api_client.rs  buy_listing.rs  canva_account.rs  canva_design.rs  cnt.rs  event.rs  listing.rs  listings.rs  metadata.rs  mod.rs  nft.rs  nft_detail.rs  offer.rs  properties.rs  sale.rs  sales.rs  seat_range.rs  sell_listing.rs  stripe_account.rs  stripe_customer.rs  ticket.rs  ticket_onchain_account.rs  ticket_type.rs
src/ticketland-data/src/repositories/: account.rs  api_client.rs  buy_listing.rs  canva_design.rs  cnt.rs  event.rs  listing.rs  listings.rs  mod.rs  nfts.rs  offer.rs  sale.rs  sales.rs  seat_range.rs  sell_listing.rs  stripe.rs  ticket.rs  ticket_onchain_accounts.rs  ticket_type.rs
src/utils/: Cargo.toml
src/utils/src/: bitmap.rs  lib.rs
src/utils/src/logger/: console_logger.rs  interface.rs  mod.rs
