[package]
name = "api-helpers"
version = "0.3.17"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-http = "3.2.1"
bolt-client = "0.10.1"
chrono = "0.4.21"
eyre = "0.6.8"
futures-util = "0.3.21"
fireauth =  { git = "https://github.com/Apocentre/fireauth", version = "0.1.6" }
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.14" }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.42" }
ticketland-crypto = { git = "https://github.com/ticketland-io/common-rust", version = "0.1.11" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.57"
qstring = "0.7.2"
