[package]
name = "common-data"
version = "0.3.42"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.14", rev="0ba21c1" }
bolt-client = "0.10.1"
bolt-proto = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.0.0"
