[package]
name = "fiat-payment"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
async-stripe = { version = "0.15.0", features = ["runtime-tokio-hyper", "checkout", "connect"] }
chrono = "0.4.21"
eyre = "0.6.8"
ticketland-core = { git = "https://github.com/ticketland-io/common-rust", version = "0.2.13" }
common-data = { git = "https://github.com/ticketland-io/common-rust", version = "0.3.36" }
ticketland-event-handler = { git = "https://github.com/ticketland-io/ticketland-event-handler", version = "0.1.9" }
program-artifacts = { git = "https://github.com/ticketland-io/program-artifacts", version = "0.1.22" }
price-feed = { git = "https://github.com/ticketland-io/price-feed", version = "0.1.1" }
serde = "1.0"
solana-sdk = "1.11.10"
