[package]
name = "ticketland-core"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
actix = "0.13.0"
actix-web = "4.0.1"
actix-multipart = "0.4.0"
bolt-client = { version = "0.10.1", features =["tokio-stream"] }
bolt-proto = "0.11.0"
bytes = "1.2.0"
futures = "0.3.12"
futures-util = "0.3.21"
tokio = { version = "1.14.1", features = ["full", "macros"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7.1", features = ["compat"] }
rust-s3 = "0.32.1"
serde_json = "1.0"
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api/" }
reqwest = { version = "0.11.11", features = ["multipart"] }
