[package]
name = "ticketland-core"
version = "0.2.16"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.0.1"
actix-multipart = "0.4.0"
arloader = { git = "https://github.com/Apocentre/arloader", version = "0.1.64", branch = "master" }
bolt-client = { version = "0.10.1", features =["tokio-stream"] }
bolt-proto = "0.11.0"
bytes = "1.2.0"
eyre = "0.6.8"
futures = "0.3.12"
futures-util = "0.3.21"
jsonwebkey = "0.3.2"
tokio = { version = "1.14.1", features = ["full", "macros"] }
tokio-retry = "0.3"
tokio-util = { version = "0.7.1", features = ["compat"] }
rust-s3 = "0.32.1"
ring = "0.16.20"
redis = { version = "0.22.0", features = ["tokio-comp"] }
redlock-async = "0.0.3"
serde_json = "1.0"
ipfs-api-backend-hyper = { git = "https://github.com/ferristseng/rust-ipfs-api/", features = ["with-send-sync"] }
infer = "0.9.0"
reqwest = { version = "0.11.11", features = ["multipart"] }
thiserror = "1.0.31"
url = "2.2.2"
