[package]
name = "ticketland-crypto"
version = "0.1.17"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bs58 = "0.4.0"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
eyre = "0.6.8"
hex = "0.4"
serde = "1.0"
serde_json = "1.0"
solana-sdk = "1.11.10"
rand = "0.7"
ring = { version = "0.16.1", features = ["std"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
aes-gcm-siv = "0.11.1"
