[package]
name = "ticketland-data"
version = "0.1.0"
edition = "2021"
license = "BUSL-1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.0", features = ["postgres"]}
diesel-async = {version = "0.1.1", features = ["postgres"]}
serde = { version = "1.0", features = ["derive"] }
